# SDB-Building-a-Debugger

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/libsdb/: bit.hpp  breakpoint_site.hpp  disassembler.hpp  elf.hpp  error.hpp  libsdb.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  stoppoint_collection.hpp  syscalls.hpp  target.hpp  types.hpp  watchpoint.hpp
include/libsdb/detail/: registers.inc
src/: CMakeLists.txt  breakpoint_site.cpp  disassembler.cpp  elf.cpp  libsdb.cpp  pipe.cpp  process.cpp  registers.cpp  syscalls.cpp  target.cpp  types.cpp  watchpoint.cpp
src/include/: syscalls.inc
test/: CMakeLists.txt  tests.cpp
test/targets/: CMakeLists.txt  anti_debugger.cpp  hello_sdb.cpp  memory.cpp  reg_read.s  reg_write.s  run_endlessly.cpp
tools/: CMakeLists.txt  sdb.cpp
